feat: new constructor for songs
